--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "firebase": "^5.10.1",
+    "firebaseui": "^3.6.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-persistedstate": "^2.5.4",
+    "vuexfire": "^3.0.0-alpha.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.7.0",
