--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bulma": "^0.7.4",
     "core-js": "^2.6.5",
     "firebase": "^5.10.1",
     "firebaseui": "^3.6.0",
     "vue": "^2.6.10",
+    "vue-clickaway": "^2.2.2",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
