--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue-clickaway": "^2.2.2",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
+    "vue-shortkey": "^3.1.7",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "vuexfire": "^3.0.0-alpha.16"
