--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vue-shortkey": "^3.1.7",
+    "vue2-hammer": "^2.1.2",
     "vuex": "^3.0.1",
     "vuex-persistedstate": "^2.5.4",
     "vuexfire": "^3.0.0-alpha.16"
