--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "core-js": "^2.6.5",
     "firebase": "^5.10.1",
     "firebaseui": "^3.6.0",
+    "three": "^0.110.0",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
+    "vue-gl": "^0.15.0",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vue-shortkey": "^3.1.7",
