--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "core-js": "^3.3.2",
-    "firebase": "^5.10.1",
-    "firebaseui": "^3.6.0",
+    "firebase": "7.3.0",
+    "firebaseui": "4.2.0",
     "three": "^0.110.0",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
@@ -32,8 +32,8 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
+    "sass": "1.23.3",
+    "sass-loader": "8.0.0",
     "vue-template-compiler": "^2.5.21"
   }
 }
