--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "vue-clickaway": "^2.2.2",
     "vue-gl": "^0.15.0",
     "vue-js-modal": "^1.3.31",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.1.3",
     "vue-shortkey": "^3.1.7",
     "vue2-hammer": "^2.1.2",
-    "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4",
-    "vuexfire": "^3.0.0-alpha.16"
+    "vuex": "3.1.1",
+    "vuex-persistedstate": "2.7.0",
+    "vuexfire": "3.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.5",
