--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "7.3.0",
     "firebaseui": "4.2.0",
     "three": "^0.110.0",
+    "three-orbitcontrols": "^2.110.1",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
     "vue-gl": "^0.15.0",
