--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "dependencies": {
     "bulma": "^0.7.4",
     "core-js": "^3.3.2",
+    "es6-tween": "^5.5.10",
     "firebase": "7.3.0",
     "firebaseui": "4.2.0",
+    "stats.js": "^0.17.0",
     "three": "0.112",
-    "three-orbitcontrols": "^2.110.1",
     "vue": "^2.6.10",
     "vue-clickaway": "^2.2.2",
-    "vue-gl": "^0.15.0",
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vue-shortkey": "^3.1.7",
