--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "bulma": "^0.7.4",
     "core-js": "^3.3.2",
     "es6-tween": "^5.5.10",
@@ -20,6 +23,7 @@
     "vue-js-modal": "^1.3.31",
     "vue-router": "^3.1.3",
     "vue-shortkey": "^3.1.7",
+    "vue-tippy": "^4.3.1",
     "vue2-hammer": "^2.1.2",
     "vuex": "3.1.1",
     "vuex-persistedstate": "2.7.0",
